feat: add cms gc with Xmx4g, Xms4g